tests/ui-nightly/transmute-ref-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:22:34
   |
22 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                  |
   |                                  the trait `FromBytes` is not implemented for `Dst`
   |                                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `FromBytes`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and $N others
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-nightly/transmute-ref-dst-not-frombytes.rs:22:34
   |
22 | const DST_NOT_FROM_BYTES: &Dst = transmute_ref!(&AU16(0));
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
